[package]
name = "objectstore-client"
authors = ["Sentry <oss@sentry.io>"]
description = "Client SDK for Objectstore, the Sentry object storage platform"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../../LICENSE.md"
version = "0.0.14"
edition = "2024"
rust-version = "1.89"
publish = true

[dependencies]
async-compression = { version = "0.4.27", features = ["tokio", "zstd"] }
bytes = { workspace = true }
futures-util = { workspace = true }
infer = { version = "0.19.0", default-features = false }
jsonwebtoken = { workspace = true }
objectstore-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
sentry-core = { version = ">=0.41", features = ["client"] }
serde = { workspace = true }
thiserror = { workspace = true }
# See https://github.com/getsentry/relay/blob/9c491a185a289e09ee9d3f56d89bd9d1fa71d815/Cargo.toml#L211
tokio = "1.45.0"
tokio-util = { workspace = true, features = ["io"] }
url = "2.5.7"

[dev-dependencies]
objectstore-test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
zstd = "0.13.3"

[features]
default = ["hickory-dns"]
hickory-dns = ["reqwest/hickory-dns"]
