[package]
name = "objectstore-client"
authors = ["Sentry <oss@sentry.io>"]
description = "Client SDK for Objectstore, the Sentry object storage platform"
homepage = "https://getsentry.github.io/objectstore/"
repository = "https://github.com/getsentry/objectstore"
license-file = "../../LICENSE.md"
version = "0.1.12"
edition = "2024"
rust-version = "1.89"
publish = true

[dependencies]
async-compression = { version = "0.4.27", features = ["tokio", "zstd"] }
base64 = { version = "0.22.1", optional = true }
percent-encoding = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
infer = { version = "0.19.0", default-features = false }
jsonwebtoken = { workspace = true }
multer = "3.1.0"
objectstore-types = { workspace = true }
reqwest = { version = "0.13.1", default-features = false, features = ["charset", "http2", "system-proxy", "json", "stream", "multipart"] }
sentry-core = { version = ">=0.41", features = ["client"] }
serde = { workspace = true }
thiserror = { workspace = true }
# See https://github.com/getsentry/relay/blob/9c491a185a289e09ee9d3f56d89bd9d1fa71d815/Cargo.toml#L211
tokio = { version = "1.45.0", default-features = false, features = ["fs"] }
tokio-util = { workspace = true, features = ["io"] }
url = "2.5.7"
zstd-safe = "7.2.4"

[dev-dependencies]
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
objectstore-test = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
zstd = "0.13.3"

[features]
default = ["native-tls", "hickory-dns"]
multipart = ["dep:base64"]

rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
hickory-dns = ["reqwest/hickory-dns"]

[[test]]
name = "multipart"
path = "tests/multipart.rs"
required-features = ["multipart"]
